# ITA-TennisCourtsReservation

./: .env.example  .gitignore  GATEWAY-SPEC.md  ITA-TennisCourtsReservation.sln  README.md  docker-compose.yml  init-databases.sql
.github/workflows/: api-gateway-mobile.yml  api-gateway.yml  court-service.yml  docker-publish.yml  notification-service.yml  reservation-service.yml  user-service.yml
api-gateway/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json  vitest.config.mts
api-gateway-mobile/: Dockerfile  README.md  package-lock.json  package.json
api-gateway/src/: server.ts
api-gateway/tests/: health.test.ts
court-service/: .gitignore  Dockerfile  README.md  pyproject.toml  test.db
court-service/src/court_service/: config.py  database.py  main.py
court-service/src/court_service/controllers/: __init__.py  court_controller.py
court-service/src/court_service/models/: __init__.py  court.py
court-service/src/court_service/schemas/: __init__.py  court.py
court-service/tests/: conftest.py  test_court_endpoints.py  test_court_repository.py
notification-service/: Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
notification-service/src/: app.ts  (+1 more)
proto/: README.md  user.proto
reservation-service/: .gitignore  Dockerfile  README.md  drizzle.config.ts  package.json
scripts/: seed.sh
user-service/: .gitignore  Dockerfile  Program.cs  README.md  UserService.csproj  UserService.sln
web-client/: .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json
(+83 files in other folders)
